--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <div class="trending-countainer">
     <span>Top</span>
     <div class="trending-header" >
-    <h1>ELBPHA</h1>
+    <h1>ELBFAA</h1>
     <button class="btn">view all</button>
     </div>
     <div class="trending-cards">
@@ -53,7 +53,7 @@
           <div class="card-info">
             <div class="card-name">
             <p>ELMOST4AR</p>
-            <h3>KEVOLETHA</h3>
+            <h3>KEVOLET4HA</h3>
             </div>
            
           </div>
@@ -114,4 +114,5 @@
     </div>
  </div>
 </body>
+
 
