--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta name="google-site-verification" content="HvkqvgrXj88fzT8hVFyDFTYMn2esdeg6gxCYyeOyqys" />
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com"crossorigin/>
     <link 
@@ -114,5 +115,6 @@
     </div>
  </div>
 </body>
+
 
 
